--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,11 @@ dependencies:
   - _openmp_mutex=4.5
   - bzip2=1.0.8
   - ca-certificates=2024.7.4
+  - click=8.1.7
+  - colorama=0.4.6
+  - daiquiri=3.0.0
+  - exceptiongroup=1.2.2
+  - iniconfig=2.0.0
   - ld_impl_linux-64=2.40
   - libexpat=2.6.2
   - libffi=3.4.2
@@ -19,11 +24,16 @@ dependencies:
   - libzlib=1.3.1
   - ncurses=6.5
   - openssl=3.3.1
+  - packaging=24.1
   - pip=24.2
+  - pluggy=1.5.0
+  - pytest=8.3.2
   - python=3.12.5
+  - python-json-logger=2.0.7
   - readline=8.2
   - setuptools=72.1.0
   - tk=8.6.13
+  - tomli=2.0.1
   - tzdata=2024a
   - wheel=0.44.0
   - xz=5.2.6
