--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+click==8.1.7
+colorama==0.4.6
+daiquiri==3.0.0
+exceptiongroup==1.2.2
+iniconfig==2.0.0
+packaging==24.1
 pip==24.2
+pluggy==1.5.0
+pytest==8.3.2
+python-json-logger==2.0.7
 setuptools==72.1.0
+tomli==2.0.1
 wheel==0.44.0
